# liblinkbot2

./: .gitmodules  CMakeLists.txt
include/linkbot/: error.hpp  linkbot.hpp  linkbotgroup.hpp
src/: clinkbot.cpp  clinkboti.cpp  clinkbotigroup.cpp  clinkbotl.cpp  clinkbotlgroup.cpp  linkbot.cpp  rgbhashtable.c.cpp  rgbhashtable.h
tests/: test.cpp
